--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "firebase": "^7.13.2",
+    "rc-slider": "^9.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
