--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.12.35",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
+    "color-scheme": "^1.0.1",
     "firebase": "^7.14.0",
     "rc-slider": "^9.2.4",
     "react": "^16.13.1",
