--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
+    "shuffle-seed": "^1.1.6",
     "typescript": "^3.7.5"
   },
   "scripts": {
