Target new firebase subdomain

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,14 @@
 {
   "projects": {
     "default": "wavelength-online"
+  },
+  "targets": {
+    "wavelength-online": {
+      "hosting": {
+        "longwave": [
+          "longwave"
+        ]
+      }
+    }
   }
 }
