--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@types/react-dom": "^16.9.6",
     "color-scheme": "^1.0.1",
     "firebase": "^7.15.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "rc-slider": "^9.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.3",
     "shuffle-seed": "^1.1.6",
     "typescript": "^3.7.5"
   },
