--- a/.firebaserc
+++ b/.firebaserc
@@ -7,6 +7,9 @@
       "hosting": {
         "longwave": [
           "longwave"
+        ],
+        "dev": [
+          "wavelength-online"
         ]
       }
     }
