--- a/package.json
+++ b/package.json
@@ -13,14 +13,21 @@
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
+    "@types/rc-slider": "^8.6.6",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.7",
     "color-scheme": "^1.0.1",
     "firebase": "^8.2.3",
+    "i18next": "^19.9.2",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.1.1",
     "lodash": "^4.17.20",
     "rc-slider": "^9.7.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-flags-select": "^2.1.2",
+    "react-i18next": "^11.8.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "shuffle-seed": "^1.1.6",
