--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
     "color-scheme": "^1.0.1",
+    "dompurify": "^2.2.7",
     "firebase": "^8.2.3",
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^6.0.1",
@@ -55,6 +56,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dompurify": "^2.2.1",
     "@types/rc-slider": "^8.6.6",
     "@types/react-router-dom": "^5.1.7"
   }
