--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "@tippyjs/react": "^4.2.0",
+    "@types/i18next-fs-backend": "^1.1.2",
     "@types/jest": "^26.0.20",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
@@ -21,6 +22,7 @@
     "firebase": "^8.2.3",
     "i18next": "^19.9.2",
     "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-fs-backend": "^1.1.1",
     "i18next-http-backend": "^1.1.1",
     "lodash": "^4.17.20",
     "rc-slider": "^9.7.1",
