--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-i18next": "^11.8.9",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-tippy": "^1.4.0",
     "shuffle-seed": "^1.1.6",
     "typescript": "^4.1.3"
   },
