--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "longwave",
   "version": "0.2.0",
   "private": true,
+  "engines": {
+    "node": "14.21.1"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
