--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "typescript": "^4.1.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
